@@ -1,6 +1,8 @@
 package de.corvinrose.ase.security;
 
 import de.corvinrose.ase.service.AuthService;
+import java.util.Arrays;
+import java.util.List;
 import lombok.AllArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -16,80 +18,78 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
-import java.util.List;
-
 @Configuration
 @AllArgsConstructor
 @EnableWebSecurity
 public class SecurityConfig extends WebSecurityConfigurerAdapter {
 
-  public static final long EXPIRATION_TIME = 1000L * 60L * 60L * 24L * 7L;
-  public static final String TOKEN_HEADER = "access_token";
-  public static final String AUTHORITIES = "USER";
-  public static final String TOKEN_NOT_VERIFIED_MESSAGE = "Token cannot be verified";
-  protected static final String[] AUTHORIZED_REQUESTS = {
-    "/user/register", "/user/login", "/user/auth"
-  };
+    public static final long EXPIRATION_TIME = 1000L * 60L * 60L * 24L * 7L;
+    public static final String TOKEN_HEADER = "access_token";
+    public static final String AUTHORITIES = "USER";
+    public static final String TOKEN_NOT_VERIFIED_MESSAGE = "Token cannot be verified";
+    protected static final String[] AUTHORIZED_REQUESTS = {
+        "/user/register", "/user/login", "/user/auth"
+    };
 
-  private final AuthService authService;
-  private final BCryptPasswordEncoder bCryptPasswordEncoder;
-  private final TokenProvider tokenProvider;
+    private final AuthService authService;
+    private final BCryptPasswordEncoder bCryptPasswordEncoder;
+    private final TokenProvider tokenProvider;
 
-  @Override
-  protected void configure(HttpSecurity http) throws Exception {
-    http.csrf().disable();
-    http.cors().configurationSource(corsFilter());
-    http.sessionManagement().sessionCreationPolicy(SessionCreationPolicy.STATELESS);
-    http.authorizeRequests().anyRequest().permitAll();
-    http.addFilterBefore(new AuthorizationFilter(tokenProvider), BasicAuthenticationFilter.class);
-  }
+    @Override
+    protected void configure(HttpSecurity http) throws Exception {
+        http.csrf().disable();
+        http.cors().configurationSource(corsFilter());
+        http.sessionManagement().sessionCreationPolicy(SessionCreationPolicy.STATELESS);
+        http.authorizeRequests().anyRequest().permitAll();
+        http.addFilterBefore(
+                new AuthorizationFilter(tokenProvider), BasicAuthenticationFilter.class);
+    }
 
-  @Override
-  protected void configure(AuthenticationManagerBuilder auth) throws Exception {
-    auth.authenticationProvider(daoAuthenticationProvider());
-  }
+    @Override
+    protected void configure(AuthenticationManagerBuilder auth) throws Exception {
+        auth.authenticationProvider(daoAuthenticationProvider());
+    }
 
-  @Bean
-  public DaoAuthenticationProvider daoAuthenticationProvider() {
-    DaoAuthenticationProvider provider = new DaoAuthenticationProvider();
-    provider.setPasswordEncoder(bCryptPasswordEncoder);
-    provider.setUserDetailsService(authService);
-    return provider;
-  }
+    @Bean
+    public DaoAuthenticationProvider daoAuthenticationProvider() {
+        DaoAuthenticationProvider provider = new DaoAuthenticationProvider();
+        provider.setPasswordEncoder(bCryptPasswordEncoder);
+        provider.setUserDetailsService(authService);
+        return provider;
+    }
 
-  @Bean
-  public CorsConfigurationSource corsFilter() {
-    CorsConfiguration corsConfiguration = new CorsConfiguration();
-    corsConfiguration.setAllowCredentials(true);
-    corsConfiguration.setAllowedOrigins(List.of("http://localhost:4200"));
-    corsConfiguration.setAllowedHeaders(
-            Arrays.asList(
-                    "Origin",
-                    "Access-Control-Allow-Origin",
-                    "Content-Type",
-                    "Accept",
-                    "Authorization",
-                    TOKEN_HEADER,
-                    "Origin, Accept",
-                    "X-Requested-With",
-                    "Access-Control-Request-Method",
-                    "Access-Control-Request-Headers"));
-    corsConfiguration.setExposedHeaders(
-            Arrays.asList(
-                    "Origin",
-                    "Content-Type",
-                    "Accept",
-                    "Authorization",
-                    TOKEN_HEADER,
-                    "Access-Control-Allow-Origin",
-                    "Access-Control-Allow-Headers",
-                    "Access-Control-Allow-Credentials"));
-    corsConfiguration.setAllowedMethods(
-            Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-    UrlBasedCorsConfigurationSource urlBasedCorsConfigurationSource =
-            new UrlBasedCorsConfigurationSource();
-    urlBasedCorsConfigurationSource.registerCorsConfiguration("/**", corsConfiguration);
-    return urlBasedCorsConfigurationSource;
-  }
+    @Bean
+    public CorsConfigurationSource corsFilter() {
+        CorsConfiguration corsConfiguration = new CorsConfiguration();
+        corsConfiguration.setAllowCredentials(true);
+        corsConfiguration.setAllowedOrigins(List.of("http://localhost:4200"));
+        corsConfiguration.setAllowedHeaders(
+                Arrays.asList(
+                        "Origin",
+                        "Access-Control-Allow-Origin",
+                        "Content-Type",
+                        "Accept",
+                        "Authorization",
+                        TOKEN_HEADER,
+                        "Origin, Accept",
+                        "X-Requested-With",
+                        "Access-Control-Request-Method",
+                        "Access-Control-Request-Headers"));
+        corsConfiguration.setExposedHeaders(
+                Arrays.asList(
+                        "Origin",
+                        "Content-Type",
+                        "Accept",
+                        "Authorization",
+                        TOKEN_HEADER,
+                        "Access-Control-Allow-Origin",
+                        "Access-Control-Allow-Headers",
+                        "Access-Control-Allow-Credentials"));
+        corsConfiguration.setAllowedMethods(
+                Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        UrlBasedCorsConfigurationSource urlBasedCorsConfigurationSource =
+                new UrlBasedCorsConfigurationSource();
+        urlBasedCorsConfigurationSource.registerCorsConfiguration("/**", corsConfiguration);
+        return urlBasedCorsConfigurationSource;
+    }
 }
